Don't gather coverage data by default and use testutils from hex

--- a/rebar.config
+++ b/rebar.config
@@ -2,10 +2,6 @@
 
 {profiles, [
     {test, [
-        {deps, [
-            {testutils, {git, "https://github.com/relayr/pdm-erl-testutils.git", {branch, "master"}}}
-        ]}
+        {deps, [testutils]}
     ]}
 ]}.
-
-{cover_enabled, true}.
